--- a/views/index.ejs
+++ b/views/index.ejs
@@ -641,6 +641,7 @@
     </nav>
 
     <aside class="menu-panel">
+        <a href="/dashboard">Discord Dashboard</a>
         <a href="#downloader">Downloader</a>
         <a href="#features">Features</a>
         <a href="#how-to-use">How to Use</a>
