--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
 <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5298191242036107"
      crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
+    <meta name="ezoic-site-verification" content="ssloXKTS6Ik4nTL2UsQVcePwhZDOA8" />
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiks Save - TikTok Downloader without Watermark</title>
     <meta name="description" content="Download TikTok videos without watermark in high quality. Free MP4 and MP3 downloads without any applications.">
